--- a/src/links.yml
+++ b/src/links.yml
@@ -1,7 +1,7 @@
 # 示例，接下来按这样填：
 
-"喵落阁": 
-  url: https://myboke.kemeow.top/ 
-  img: https://img.314926.xyz/images/2025/08/09/kemiaofxjun.webp
-  text: "愿你看清一切真相后，依旧热爱你的家人和朋友。"
+- name: 喵落阁 
+  url: https://home.kemeow.top/ 
+  img: https://www.gravatar.com/avatar/7614b285e795f21e780247019c4e15c4?s=256
+  descr: "愿你看清一切真相后，依旧热爱你的家人和朋友。"
 # 接下来跟着填即可。
