--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -2,7 +2,7 @@ name: Check Links
 
 on:
   schedule:
-    - cron: '0 15 * * *'  # 每天北京时间23点（UTC+8 → UTC-8小时）
+    - cron: '0 15 * * *'  # 每天北京时间23点（UTC+8）
   workflow_dispatch:
 
 jobs:
@@ -18,7 +18,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install requests
+        run: pip install requests tenacity
 
       - name: Run link checker
         run: python src/check_links.py
